# nfr52840-blinky

./: Cargo.toml  debug_console.txt  nrf52840.svd  probe_info.txt  terminal_console.txt
boards/dongle-fw/: loopback-fw  puzzle-fw
