[package]
name = "nfr52840-blinky"
version = "0.0.1"
edition = "2021"


[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
dk = { path = "/Users/adamh/Dev/nrf52840-blinky/boards/dk", features = ["radio"] }
heapless = "0.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3.5"
defmt-rtt = "0.4"

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
